// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignIn /> should render with all props 1`] = `
<div
  className="sign-in"
>
  <img
    alt="sign in"
    className="sign-in__logo"
    src="some.pic"
  />
  <WithStyles(Input)
    className="sign-in__input"
    name="login"
    onChange={[Function]}
    placeholder="login"
    value=""
  />
  <WithStyles(Input)
    className="sign-in__input"
    name="password"
    onChange={[Function]}
    placeholder="password"
    type="password"
    value=""
  />
  <div
    className="sign-in__button"
  >
    <SignInButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`<SignIn /> should render without props 1`] = `
<div
  className="sign-in"
>
  <WithStyles(Input)
    className="sign-in__input"
    name="login"
    onChange={[Function]}
    placeholder="login"
    value=""
  />
  <WithStyles(Input)
    className="sign-in__input"
    name="password"
    onChange={[Function]}
    placeholder="password"
    type="password"
    value=""
  />
  <div
    className="sign-in__button"
  >
    <SignInButton
      onClick={[Function]}
    />
  </div>
</div>
`;
